[workspace]
resolver = "2"

[package]
name = "bno055"
description = "Bosch Sensortec BNO055 9-axis IMU driver"
version = "0.5.0" # Remember to update lib.rs
authors = ["Eugene P. <eupn@protonmail.com>", "Henrik B. <hargonix@gmail.com>", "Atin M. <atinm.dev@gmail.com"]
repository = "https://github.com/eupn/bno055"
edition = "2018"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "embedded-hal-driver",
    "embedded-io-async",
    "bno055",
]
license-file = "LICENSE"
readme = "README.md"

# linux-embedded-hal requires 1.65 because of nix
rust-version = "1.65"

[dependencies]
byteorder = { version = "1", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
mint = "^0.5.4"
bitflags = "2"
num-traits = { version = "0.2.15", default-features = false, features = ["libm"] }
num-derive = "0.4.1"
cortex-m-rt = "0.7"
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.0.0", optional = true }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io-async = { version = "0.6" }

embassy-time = { version = "0.4.0", optional = true }
embassy-rp = { version = "0.4.0", optional = true, features = ["rp2040", "time-driver", "defmt", "critical-section-impl"] }
embassy-executor = { version = "0.7.0", optional = true, features = ["arch-cortex-m", "executor-thread", "defmt"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[features]
default = []
std = []

i2c = [
    "embassy-executor/arch-cortex-m",
    "embassy-executor/executor-thread",
    "embassy-executor/defmt",
    "embassy-rp",
    "embassy-rp/rp2040",
    "embassy-time",
    "defmt",
    "defmt-rtt"
]
uart = ["embassy-time", "embassy-executor", "embassy-rp"]
defmt-03 = ["defmt", "defmt-rtt", "embassy-time"]
serde = ["dep:serde", "mint/serde"]

[[example]]
name = "calibrate_i2c"
path = "examples/calibrate_i2c.rs"

[[example]]
name = "calibrate_uart"
path = "examples/calibrate_uart.rs"

[package.metadata.cortex-m-rt]
linker-script = "link.x"