[package]
name = "examples-bin"
version = "0.1.0"
edition = "2018"

[dependencies]
cortex-m-rt = "0.7.0"
bno055 = { path = "../bno055", default-features = false }
mint = "0.5.4"
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-rp = { version = "0.4.0", features = ["rp2040", "time-driver", "critical-section-impl"] }
embassy-time = "0.4.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"], default-features = false }

[patch.crates-io]
static_cell = { version = "2.1.0", features = ["portable-atomic-critical-section"] }

[features]
i2c = ["bno055/i2c"]
uart = ["bno055/uart"]

[profile.dev]
panic = "abort"
debug = 2
lto = true
opt-level = "z"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"

[[bin]]
name = "calibrate_i2c"
path = "src/calibrate_i2c.rs"
required-features = ["i2c"]

[[bin]]
name = "calibrate_uart"
path = "src/calibrate_uart.rs"
required-features = ["uart"]